# rust_dx_ai_slopped

./: .gitignore  CLAUDE.md  CRATES.md  Cargo.toml  DEPENDENCIES.md  LICENSE  Makefile  README.md  ROADMAP.md  book.toml  build.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: hash_bench.rs
crates/datagen/: Cargo.toml  README.md
crates/datagen/src/: categories.rs  color.rs  file.rs  generators.rs  lib.rs  password.rs  science.rs  uuid.rs  vehicle.rs
crates/datagen/src/animals/: mod.rs
crates/datagen/src/astrology/: mod.rs
crates/datagen/src/commerce/: company.rs  currency.rs  job.rs  mod.rs  product.rs
crates/datagen/src/crypto/: mod.rs
crates/datagen/src/ecommerce/: mod.rs
crates/datagen/src/education/: mod.rs
crates/datagen/src/entertainment/: books.rs  games.rs  mod.rs  movies.rs  music.rs  tv.rs
crates/datagen/src/expression/: ast.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  providers.rs
crates/datagen/src/expression/functions/: mod.rs  number.rs  options.rs  string.rs
crates/datagen/src/food/: beverages.rs  dishes.rs  ingredients.rs  mod.rs  restaurants.rs
crates/datagen/src/geo/: mod.rs  point.rs
crates/datagen/src/government/: mod.rs
crates/datagen/src/hacker/: mod.rs
crates/datagen/src/healthcare/: mod.rs
crates/datagen/src/locale/: de_de.rs  en_us.rs  es_es.rs  fr_fr.rs  it_it.rs  ja_jp.rs  mod.rs  nl_nl.rs  no_no.rs  pt_br.rs  sv_se.rs  zh_cn.rs
crates/datagen/src/network/: domain.rs  ip.rs  mac.rs  mod.rs  url.rs
crates/datagen/src/numeric/: credit_card.rs  finance.rs  iban.rs  isbn.rs  mod.rs  ssn.rs
crates/datagen/src/personal/: address.rs  email.rs  mod.rs  names.rs  phone.rs  username.rs
crates/datagen/src/schema/: avro.rs  graphql.rs  inference.rs  json_schema.rs  mod.rs  openapi.rs  sql.rs
crates/datagen/src/selection/: batch.rs  mod.rs  unique.rs  weighted.rs
crates/datagen/src/social/: mod.rs
crates/datagen/src/sports/: mod.rs
crates/datagen/src/temporal/: business.rs  date.rs  datetime.rs  mod.rs  time.rs
crates/datagen/src/text/: lorem.rs  mod.rs  patterns.rs  template.rs  words.rs
crates/datagen/src/travel/: mod.rs
crates/datagen/src/weather/: mod.rs
crates/dhis2/: Cargo.toml  README.md
crates/dhis2/src/: client.rs  data_elements.rs  data_sets.rs  data_values.rs  info.rs  lib.rs  org_unit_group_sets.rs  org_unit_groups.rs  org_units.rs  tui.rs  uid.rs
crates/expr/: Cargo.toml  README.md
crates/expr/src/: lib.rs  parser.rs
crates/progress/: Cargo.toml  README.md
crates/progress/src/: lib.rs
docs/: SUMMARY.md  configuration.md  installation.md  introduction.md  quick-start.md
docs/appendices/: a-cargo-reference.md  b-common-crates.md  c-troubleshooting.md  d-resources.md  e-expr-language.md  f-dx-progress.md  g-cargo-features.md  h-ratatui-guide.md  i-async-tokio.md  j-cross-platform-testing-environments.md  k-qemu-complete-guide.md  l-dx-datagen.md
docs/commands/: hash.md  overview.md
docs/part-1-rust-fundamentals/: 01-getting-started.md  02-ownership-borrowing.md  03-structs-enums.md  04-error-handling.md  05-traits-generics.md  06-modules-crates.md  07-collections.md  08-iterators.md  09-closures.md  10-macros-basics.md  intro.md
docs/part-2-cli-with-clap/: 01-clap-basics.md  02-derive-macro.md  03-arguments-options.md  05-value-validation.md  07-shell-completions.md  08-help-customization.md  09-advanced-patterns.md  10-real-world-examples.md  intro.md
docs/part-3-dx-command-reference/: calc.md  chat.md  completions.md  compress.md  config.md  csv.md  dhis2.md  diff.md  egui.md  encode.md  encrypt.md  env.md  expr.md  fun.md  grep.md  hash.md  http.md  json.md  jwt.md  markdown.md  net.md  overview.md  polars.md  rand.md  system.md  template.md  text.md  time.md  ui.md  uuid.md  watch.md  xml.md  yaml.md
docs/part-4-testing/: 01-unit-testing.md  02-integration-testing.md  03-assert-cmd.md  04-snapshot-testing.md  05-property-testing.md  06-mocking.md  07-test-organization.md  08-coverage.md  09-ci-testing.md  intro.md
docs/part-5-benchmarking/: 01-criterion-basics.md  02-benchmark-groups.md  03-parameterized.md  04-profiling.md  05-optimization.md  intro.md
docs/part-6-documentation/: 01-mdbook-setup.md  02-mdbook-features.md  03-mdbook-preprocessors.md  04-mdbook-themes.md  05-rustdoc.md  06-doc-tests.md  07-man-pages.md  intro.md
docs/part-7-cross-platform/: 01-platform-detection.md  02-conditional-compilation.md  03-path-handling.md  04-platform-testing.md  05-cross-compilation.md  intro.md
docs/part-8-production/: 01-error-messages.md  02-logging.md  03-configuration.md  04-distribution.md  05-versioning.md  06-maintenance.md  intro.md
docs/part-9-optimization/: 01-release-builds.md  02-size-optimization.md  03-speed-optimization.md  04-memory-optimization.md  05-compile-time.md  06-profiling-analysis.md  intro.md
examples/: 0101_project_structure.rs  0102_clap_derive_basics.rs  0103_subcommand_setup.rs  0104_error_handling.rs  0201_hash_command.rs  0202_encode_command.rs  0203_uuid_command.rs  0204_time_command.rs  0205_json_command.rs  0301_config_file.rs  0302_env_integration.rs  0303_config_commands.rs  0304_profiles.rs  0401_colored_output.rs  0402_progress_bars.rs  0403_interactive_prompts.rs  0404_table_output.rs  0501_unit_testing.rs  0502_integration_tests.rs  0503_snapshot_testing.rs  0504_test_fixtures.rs  0601_property_testing.rs  0602_error_testing.rs  0603_cross_platform_tests.rs  0604_benchmark_tests.rs  0701_mdbook_setup.rs  0702_command_docs.rs  0703_api_docs.rs  0704_man_pages.rs  0801_platform_paths.rs  0802_platform_features.rs  0803_platform_testing.rs  0901_cross_rs_setup.rs  0902_github_actions_ci.rs  0903_release_workflow.rs  0904_artifact_packaging.rs  1001_shell_completions.rs  1002_update_checking.rs  1003_telemetry_opt_in.rs  1004_distribution.rs
proto/: chat.proto
scripts/: smoke-test.sh
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: calc.rs  compress.rs  config.rs  csv.rs  dhis2.rs  diff.rs  egui.rs  encode.rs  encrypt.rs  env.rs  expr.rs  fun.rs  jwt.rs  (+18 more)
tests/: cli.rs
(+49 files in other folders)
