[workspace]
members = [".", "crates/progress", "crates/expr", "crates/dhis2", "crates/datagen"]

[workspace.package]
edition = "2021"
authors = ["Morten Haraldsen <morten@haraldsen.io>"]
license = "MIT"
repository = "https://github.com/mortenoh/rust_dx_ai_slopped"

[package]
name = "rust_cli_complete"
version = "0.1.0"
edition.workspace = true
description = "A production-ready CLI toolkit demonstrating best practices"
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["cli", "developer-tools", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dx"
path = "src/main.rs"


[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help", "color"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

# Encoding/Hashing
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
md-5 = "0.10"
bcrypt = "0.17.1"
argon2 = "0.5"

# Data Formats
serde-saphyr = "0.0.11"
csv = "1.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }

# Crypto/Security (Pure Rust)
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Compression (Pure Rust)
flate2 = "1.1"
ruzstd = "0.7"
tar = "0.4"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

# Dev Tools
similar = "2.6"
tera = "1.20"
comrak = { version = "0.49.0", default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
thiserror = "2"
anyhow = "1"
regex = "1"
walkdir = "2"
ureq = { version = "3", default-features = false, features = ["native-tls", "gzip"] }
notify = "8"
notify-debouncer-mini = "0.7"

# Terminal UI
colored = "3"
dx-progress = { path = "crates/progress" }
dx-expr = { path = "crates/expr" }
dx-dhis2 = { path = "crates/dhis2", features = ["tui"] }
dx-datagen = { path = "crates/datagen" }
sysinfo = "0.32"
rand = "0.9.2"
heck = "0.5.0"
lipsum = "0.9.1"
bytesize = "2.3.1"
humantime = "2.3.0"
url = "2.5.7"
urlencoding = "2.1"
qrcode = "0.14"
ctrlc = "3.4"
terminal_size = "0.4"
nix = { version = "0.29", features = ["term"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP client for DHIS2 API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# GUI
eframe = "0.33"
egui_extras = { version = "0.33", features = ["image", "syntect"] }
egui_plot = "0.34"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
syntect = "5"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-std",
    "io-util",
] }
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic-prost = "0.14.2"
polars = { version = "0.52.0", default-features = false, features = ["lazy", "csv", "parquet", "json", "dtype-full", "describe", "sql"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[[bench]]
name = "hash_bench"
harness = false

# Linux-specific: vendored OpenSSL for cross-compilation (native-tls uses OpenSSL on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
