[package]
name = "dx-datagen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data generation utilities for test data, random values, and predefined categories"

[dependencies]
rand = "0.9"
uuid = { version = "1", features = ["v4", "v7"] }
