[package]
name = "dx-datagen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data generation utilities for test data, random values, and predefined categories"

[features]
default = []
temporal = ["dep:chrono"]
locales = []
schema = ["dep:serde_json"]
geo = ["dep:geojson"]
full = ["temporal", "locales", "schema", "geo"]

[dependencies]
rand = "0.9"
uuid = { version = "1", features = ["v4", "v7"] }
ulid = "1"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
geojson = { version = "0.24", optional = true }
