[package]
name = "dx-dhis2"
version = "0.1.0"
edition.workspace = true
description = "DHIS2 API client library for Rust"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dhis2", "health", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1"
colored = "3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional TUI support
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
